# proxmox-cicd

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  versions.lock.yaml  versions.yaml
docs/: PLAN.md  architecture.md  cloudflare-tunnel.md  cloudflared-helm-post-renderer.md  idempotency.md  vaultwarden-notes.md  vaultwarden-seed-note.md  vaultwarden-sync.md
docs/plans/: 2026-07-15-openbao-application-plan.md  2026-07-15-sequence-abstraction-plan.md  PLAN.md
docs/runbooks/: add-an-app.md  destroy-and-recreate.md  rotate-gitea-tokens.md  setup-vaultwarden-sync.md
infra/clusters/: catalog.yaml.example
infra/helm-charts/: cloudflare-tunnel-remote-0.1.2.tgz
provisioner/: __init__.py  __main__.py  cli.py
provisioner/lib/: __init__.py  catalog.py  container.py  helm_runner.py  kubeconfig_loader.py  kubectl_runner.py  log.py  orchestrator.py  output_writer.py  planner.py  render_values.py
provisioner/tests/: conftest.py  test_app_class_attributes.py  test_apps.py  test_apps_no_appspec_refs.py  test_apps_no_duplicate_dotenv_parser.py  test_apps_no_inline_vaultwarden_client.py  test_apps_no_inline_wp9_patterns.py  test_apps_no_kubeconfig_imports.py  test_apps_no_module_level_chart_constants.py  test_base_app.py  test_base_app_dotenv.py  test_base_app_helpers.py  test_base_app_vaultwarden.py  test_bitwarden_sm.py  test_catalog_delegates_deep_merge.py  test_catalog_only_enablement.py  test_cloudflared.py  test_cloudflared_tunnel.py  test_gitea_admin_pw.py  test_gitea_runner.py  test_groups.py  test_helm_post_renderer.py  test_kubeconfig_resolution.py  test_kubectl_runner.py  test_no_alt_render_layer.py  test_orchestrator.py  test_orchestrator_regression_guards.py  test_output_writer.py  test_planner.py  test_render_values.py  test_shipped_catalog.py  (+5 more)
scripts/: reseed-vks-creds.sh  vaultwarden-seed-note.py
values/: bitwarden-sm-operator.yaml  cloudflared.yaml  gitea-runner.yaml  gitea.yaml  vaultwarden-kubernetes-secrets.yaml
(+38 files in other folders)
