[project]
name = "proxmox-cicd"
version = "0.1.0"
description = "Stage-3 of the proxmox provisioning pipeline: deploys an extensible catalog of operator-facing apps (gitea, gitea-runner, bitwarden-sm-operator) onto a k3s cluster provisioned by the sibling proxmox-k3s repo."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "proxmox-cicd" }]
dependencies = [
    "cryptography>=49.0.0",
    "pyyaml>=6.0.1,<7.0",
]

# Runtime deps:
# - cryptography: Vaultwarden PBKDF2/HKDF/AES/HMAC primitives
#   (lib/vaultwarden/crypto.py).
# - pyyaml: the helm-chart post-renderer reads/writes the chart's
#   rendered manifest stream (lib/helm_post_renderers/*.py).
# Everything else is stdlib: subprocess for helm/kubectl, json
# for the apps.json handoff, dataclasses for state, pathlib for IO.
# Runtime deps for the apps we install are pinned in versions.yaml.

[project.scripts]
# `uv tool install .` (or `pip install .`) registers both CLIs on PATH.
cicdctl = "provisioner.cli:main"
vaultwarden-notes = "provisioner.lib.cli.vaultwarden_notes:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["provisioner"]
exclude = ["provisioner/tests", "provisioner/tests/*"]

[tool.pytest.ini_options]
testpaths = ["provisioner/tests"]
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501", "I001"]

[tool.mypy]
python_version = "3.11"
strict = true
explicit_package_bases = true
files = ["provisioner/lib", "provisioner/cli.py", "provisioner/__main__.py"]
exclude = ["provisioner/tests/.*"]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
    "types-PyYAML>=6.0.12,<7.0",
]
